--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -8,7 +8,7 @@
             content="A common layout example on the web called the 'holy grail' layout"
         />
         <meta name="author" content="Joaquín Morales" />
-        <title>Holy Grail</title>
+        <title>This is a Holy Grail page</title>
     </head>
     <body>
         <header>
