--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Joaquín Morales | WDD 130</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a href="#">Home</a>
-        <a href="wwr/">Rafting Website</a>
-        <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
-      </nav>
-    </header>
-    <main>
-      <h1>Joaquín Morales | WDD 130</h1>
-      <img src="images/profile.png" alt="Joaquín Morales" width="200" />
-      <p>
-        Hi! My name is Joaquín, I am from Santiago, Chile and I love coding. I
-        work for a tech company as a Web Developer and I am currently working
-        with Angular framework
-      </p>
-    </main>
-    <footer>
-      <p>©2024 ⚡️ Joaquín Morales ⚡️ Santiago, Chile</p>
-    </footer>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="styles/styles.css" />
+        <title>Joaquín Morales | WDD 130</title>
+    </head>
+    <body>
+        <header>
+            <nav>
+                <a href="#">Home</a>
+                <a href="wwr/">Rafting Website</a>
+                <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+            </nav>
+        </header>
+        <main>
+            <h1>Joaquín Morales | WDD 130</h1>
+            <img src="images/profile.png" alt="Joaquín Morales" width="200" />
+            <p>
+                Hi! My name is Joaquín, I am from Santiago, Chile and I love
+                coding. I work for a tech company as a Web Developer and I am
+                currently working with Angular framework
+            </p>
+        </main>
+        <footer>
+            <p>©2024 ⚡️ Joaquín Morales ⚡️ Santiago, Chile</p>
+        </footer>
+    </body>
 </html>
