Add aside and some styles

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Rafting website, Web fundamentals course projecto for BYU"
+        />
+        <meta name="author" content="Joaquín Morales" />
         <link rel="stylesheet" href="styles/styles.css" />
         <title>Joaquín Morales | WDD 130</title>
     </head>
@@ -23,6 +28,18 @@
                 currently working with Angular framework
             </p>
         </main>
+        <aside>
+            <h2>Chile</h2>
+            <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR61QtH_sHutBXTd1lp4vfdaCWsC4LSOy4uQQ&usqp=CAU"
+                alt="Chile landscape"
+            />
+            <p>
+                My country is a large and beautiful land, full with many types
+                of landscape, since Atacama's dessert to the chilean cold
+                Antartica.
+            </p>
+        </aside>
         <footer>
             <p>©2024 ⚡️ Joaquín Morales ⚡️ Santiago, Chile</p>
         </footer>
