Update temples and image profile

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                 <a href="#">Home</a>
                 <a href="wwr/">Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+                <a href="https://www.linkedin.com/in/joaquin-morales-trincado/"
+                    >My LinkedIn</a
+                >
+                <a href="https://facebook.com">Facebook</a>
             </nav>
         </header>
         <main>
@@ -27,8 +31,31 @@
                 coding. I work for a tech company as a Web Developer and I am
                 currently working with Angular framework
             </p>
+            <ul class="box">
+                <li>
+                    <a
+                        href="https://www.churchofjesuschrist.org/temples/details/santiago-chile-temple?lang=spa"
+                        target="_blank"
+                        >Temple - Santiago de Chile</a
+                    >
+                </li>
+                <li>
+                    <a
+                        href="https://www.churchofjesuschrist.org/temples/details/antofagasta-chile-temple?lang=spa"
+                        target="_blank"
+                        >Templo - Antofagasta, Chile</a
+                    >
+                </li>
+                <li>
+                    <a
+                        href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=spa"
+                        target="_blank"
+                        >Temple - Salt Lake City, Utah</a
+                    >
+                </li>
+            </ul>
         </main>
-        <aside>
+        <aside class="box">
             <h2>Chile</h2>
             <img
                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR61QtH_sHutBXTd1lp4vfdaCWsC4LSOy4uQQ&usqp=CAU"
@@ -44,4 +71,5 @@
             <p>©2024 ⚡️ Joaquín Morales ⚡️ Santiago, Chile</p>
         </footer>
     </body>
+    <!-- 15/03/24 -->
 </html>
