--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="About Us Page for the website" />
-        <meta name="author" content="" />
+        <meta name="author" content="Joaquin Morales | WDD 130" />
         <link rel="stylesheet" href="styles/rafting.css" />
         <title>About Us</title>
     </head>
