Implement flexbox and grid

--- a/index.html
+++ b/index.html
@@ -23,50 +23,56 @@
                 <a href="https://facebook.com">Facebook</a>
             </nav>
         </header>
-        <main>
-            <h1>Joaquín Morales | WDD 130</h1>
-            <img src="images/profile.png" alt="Joaquín Morales" width="200" />
-            <p>
-                Hi! My name is Joaquín, I am from Santiago, Chile and I love
-                coding. I work for a tech company as a Web Developer and I am
-                currently working with Angular framework
-            </p>
-            <ul class="box">
-                <li>
-                    <a
-                        href="https://www.churchofjesuschrist.org/temples/details/santiago-chile-temple?lang=spa"
-                        target="_blank"
-                        >Temple - Santiago de Chile</a
-                    >
-                </li>
-                <li>
-                    <a
-                        href="https://www.churchofjesuschrist.org/temples/details/antofagasta-chile-temple?lang=spa"
-                        target="_blank"
-                        >Templo - Antofagasta, Chile</a
-                    >
-                </li>
-                <li>
-                    <a
-                        href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=spa"
-                        target="_blank"
-                        >Temple - Salt Lake City, Utah</a
-                    >
-                </li>
-            </ul>
-        </main>
-        <aside class="box">
-            <h2>Chile</h2>
-            <img
-                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR61QtH_sHutBXTd1lp4vfdaCWsC4LSOy4uQQ&usqp=CAU"
-                alt="Chile landscape"
-            />
-            <p>
-                My country is a large and beautiful land, full with many types
-                of landscape, since Atacama's dessert to the chilean cold
-                Antartica.
-            </p>
-        </aside>
+        <div class="grid">
+            <main>
+                <h1>Joaquín Morales | WDD 130</h1>
+                <img
+                    src="images/profile.png"
+                    alt="Joaquín Morales"
+                    width="200"
+                />
+                <p>
+                    Hi! My name is Joaquín, I am from Santiago, Chile and I love
+                    coding. I work for a tech company as a Web Developer and I
+                    am currently working with Angular framework
+                </p>
+                <ul class="box">
+                    <li>
+                        <a
+                            href="https://www.churchofjesuschrist.org/temples/details/santiago-chile-temple?lang=spa"
+                            target="_blank"
+                            >Temple - Santiago de Chile</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://www.churchofjesuschrist.org/temples/details/antofagasta-chile-temple?lang=spa"
+                            target="_blank"
+                            >Templo - Antofagasta, Chile</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=spa"
+                            target="_blank"
+                            >Temple - Salt Lake City, Utah</a
+                        >
+                    </li>
+                </ul>
+            </main>
+            <aside class="box">
+                <h2>Chile</h2>
+                <img
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR61QtH_sHutBXTd1lp4vfdaCWsC4LSOy4uQQ&usqp=CAU"
+                    alt="Chile landscape"
+                />
+                <p>
+                    My country is a large and beautiful land, full with many
+                    types of landscape, since Atacama's dessert to the chilean
+                    cold Antartica.
+                </p>
+            </aside>
+        </div>
         <footer>
             <p>©2024 ⚡️ Joaquín Morales ⚡️ Santiago, Chile</p>
         </footer>
