Fix trailing slash by disable prettier

--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta
-            name="description"
-            content="Rafting website, Web fundamentals course projecto for BYU"
-        />
-        <meta name="author" content="Joaquín Morales" />
-        <link rel="stylesheet" href="styles/styles.css" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Rafting website, Web fundamentals course projecto for BYU">
+        <meta name="author" content="Joaquín Morales">
+        <link rel="stylesheet" href="styles/styles.css">
         <title>Joaquín Morales | WDD 130</title>
     </head>
     <body>
@@ -30,7 +27,7 @@
                     src="images/profile.png"
                     alt="Joaquín Morales"
                     width="200"
-                />
+                >
                 <p>
                     Hi! My name is Joaquín, I am from Santiago, Chile and I love
                     coding. I work for a tech company as a Web Developer and I
@@ -65,7 +62,7 @@
                 <img
                     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR61QtH_sHutBXTd1lp4vfdaCWsC4LSOy4uQQ&usqp=CAU"
                     alt="Chile landscape"
-                />
+                >
                 <p>
                     My country is a large and beautiful land, full with many
                     types of landscape, since Atacama's dessert to the chilean
