About us page improvements

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="About Us Page for the website" />
-        <meta name="author" content="Joaquin Morales | WDD 130" />
-        <link rel="stylesheet" href="styles/rafting.css" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="About Us Page for the website">
+        <meta name="author" content="Joaquin Morales | WDD 130">
+        <link rel="stylesheet" href="styles/rafting.css">
         <title>About Us</title>
     </head>
     <body>
         <header>
-            <img src="images/logo.png" alt="" />
+            <img src="images/logo.png" alt="">
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
@@ -20,10 +20,10 @@
         </header>
         <main>
             <div class="hero">
-                <img src="images/hero.jpg" alt="" />
+                <img src="images/hero.jpg" alt="">
                 <h1>White Water Rafting</h1>
                 <article>
-                    <img src="images/happy.png" alt="" />
+                    <img src="images/happy.png" alt="">
                     <p>
                         Lorem ipsum dolor sit amet consectetur, adipisicing
                         elit. Vero molestiae quasi, illum rerum enim deserunt
@@ -31,40 +31,67 @@
                     </p>
                 </article>
             </div>
-            <section>
+            <section class="history">
                 <h2>History</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Voluptatum doloremque ea nam velit alias praesentium fugiat
-                    magni a quam repudiandae voluptatem harum veritatis possimus
-                    laboriosam est itaque rerum, esse dolorum. Cum suscipit
-                    numquam laboriosam accusamus recusandae unde doloribus nobis
-                    officia odit quam itaque aliquid, rem expedita quaerat
-                    dignissimos beatae explicabo incidunt mollitia dolor ducimus
-                    quos delectus provident odio. Quaerat, quibusdam.
-                </p>
+                <div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Voluptatum doloremque ea nam velit alias praesentium fugiat
+                        magni a quam repudiandae voluptatem harum veritatis possimus
+                        laboriosam est itaque rerum, esse dolorum. Cum suscipit
+                        numquam laboriosam accusamus recusandae unde doloribus nobis
+                        officia odit quam itaque aliquid, rem expedita quaerat
+                        dignissimos beatae explicabo incidunt mollitia dolor ducimus
+                        quos delectus provident odio. Quaerat, quibusdam.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Voluptatum doloremque ea nam velit alias praesentium fugiat
+                        magni a quam repudiandae voluptatem harum veritatis possimus
+                        laboriosam est itaque rerum, esse dolorum. Cum suscipit
+                        numquam laboriosam accusamus recusandae unde doloribus nobis
+                        officia odit quam itaque aliquid, rem expedita quaerat
+                        dignissimos beatae explicabo incidunt mollitia dolor ducimus
+                        quos delectus provident odio. Quaerat, quibusdam.
+                    </p>
+                </div>
             </section>
-            <section>
+            <section class="adventures">
                 <h2>Adventure Awaits You!</h2>
-                <img src="images/image1.jpg" alt="" />
-                <img src="images/image2.jpg" alt="" />
-                <img src="images/image3.jpg" alt="" />
-                <img src="images/image4.jpg" alt="" />
-                <img src="images/image5.jpg" alt="" />
+                <figure>
+                    <img src="images/image1.jpg" alt="">
+                    <figcaption>Los Dientes del Diablo</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/image2.jpg" alt="">
+                    <figcaption>Big Mallard</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/image3.jpg" alt="">
+                    <figcaption>Half Day Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/image4.jpg" alt="">
+                    <figcaption>Rio Maipo</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/image5.jpg" alt="">
+                    <figcaption>Las siete tazas</figcaption>
+                </figure>
             </section>
         </main>
         <footer>
             <p>Footer Content Including Social Media Icons/Links</p>
             <nav>
-                <a href="www.facebook.com"
-                    ><img src="images/facebook-icon.png" alt="" width="30"
-                /></a>
-                <a href="www.instagram.com"
-                    ><img src="images/instagram-icon.png" alt="" width="30"
-                /></a>
-                <a href="www.linkedin.com"
-                    ><img src="images/linkedin-icon.png" alt="" width="30"
-                /></a>
+                <a href="www.facebook.com">
+                    <img src="images/facebook-icon.png" alt="" width="30">
+                </a>
+                <a href="www.instagram.com">
+                    <img src="images/instagram-icon.png" alt="" width="30">
+                </a>
+                <a href="www.linkedin.com">
+                    <img src="images/linkedin-icon.png" alt="" width="30">
+                </a>
             </nav>
         </footer>
     </body>
