--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
         <meta name="description" content="About Us Page for the website">
         <meta name="author" content="Joaquin Morales | WDD 130">
         <link rel="stylesheet" href="styles/rafting.css">
-        <title>About Us</title>
+        <title>White Water Rafting - About Us</title>
     </head>
     <body>
         <header>
