--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -3,29 +3,40 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles/poll-form.css">
         <title>Document</title>
     </head>
     <body>
-        <header></header>
+        <header>
+            <h1>Poll Form</h1>
+        </header>
         <main>
             <form action="#">
                 <fieldset>
                     <legend>Contact Information</legend>
-                    <label for="fullname">Full name</label>
-                    <input id="fullname" name="fullname" type="text">
-                    <label for="useremail">Email</label>
-                    <input type="email" name="useremail" id="useremail">
+                    <div class="form-item column2">
+                        <label for="fullname">Full name</label>
+                        <input id="fullname" name="fullname" type="text">
+                    </div>
+                    <div class="form-item column2">
+                        <label for="useremail">Email</label>
+                        <input type="email" name="useremail" id="useremail">
+                    </div>
                 </fieldset>
                 <fieldset>
                     <legend>Questions</legend>
-                    <label for="browser">What is your favorite browser?</label>
-                    <select name="browser" id="browser">
-                        <option value="safari">Safari</option>
-                        <option value="chrome">Chrome</option>
-                        <option value="firefox">Firefox</option>
-                    </select>
-                    <label for="pet">Do you have a household pet?</label>
-                    <input type="checkbox" name="pet" id="pet">
+                    <div class="form-item column1">
+                        <label for="browser">What is your favorite browser?</label>
+                        <select name="browser" id="browser">
+                            <option value="safari">Safari</option>
+                            <option value="chrome">Chrome</option>
+                            <option value="firefox">Firefox</option>
+                        </select>
+                    </div>
+                    <div class="form-item column1">
+                        <label for="pet">Do you have a household pet?</label>
+                        <input type="checkbox" name="pet" id="pet">
+                    </div>
                     <label for="places">List the places you have lived:</label>
                     <textarea
                         name="places"
@@ -38,6 +49,6 @@
                 <button type="submit">Submit Poll</button>
             </form>
         </main>
-        <footer></footer>
+        <footer>©Joaquín Morales | WDD 130</footer>
     </body>
 </html>
