--- a/quiz.html
+++ b/quiz.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Quiz page">
+  <meta name="author" content="Joaquín Morales">
   <link rel="stylesheet" href="styles/quiz.css">
   <title>Quiz</title>
 </head>
