--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -19,6 +19,7 @@
             </nav>
         </header>
         <main class="contact">
+            <h1>Contact Us</h1>
             <section class="team">
                 <h2>Our Team</h2>
                 <div>
@@ -53,36 +54,36 @@
                         <div class="col1">
                             <label>
                                 Name
-                                <input type="text" name="name">
+                                <input id="name" type="text" name="name">
                             </label>
                             <label>
                                 Email
-                                <input type="email" name="email">
+                                <input id="email" type="email" name="email">
                             </label>
                             <div class="radio-buttons">
                                 <h3>Tell us why are you contacting us</h3>
                                 <label>
-                                    <input type="radio" name="purpose" value="generalInquiry">
+                                    <input id="generalInquiry" type="radio" name="purpose" value="generalInquiry">
                                     General Inquiry
                                 </label>
                                 <label>
-                                    <input type="radio" name="purpose" value="reservationQuestion">
+                                    <input id="reservationQuestion" type="radio" name="purpose" value="reservationQuestion">
                                     Reservation Question
                                 </label>
                                 <label>
-                                    <input type="radio" name="purpose" value="websiteSuggestion">
+                                    <input id="websiteSuggestion" type="radio" name="purpose" value="websiteSuggestion">
                                     Website Suggestion
                                 </label>
                             </div>
                             <label>
-                                <input type="checkbox" name="newsletter" value="yes">
+                                <input id="newsletter" type="checkbox" name="newsletter" value="yes">
                                 Please subscribe me to the monthly newsletter
                             </label>                       
                         </div>
                         <div class="col2">
                             <label>
                                 Message
-                                <textarea name="message" cols="30" rows="10"></textarea>
+                                <textarea id="message" name="message" cols="30" rows="10"></textarea>
                             </label>
                         </div>
                     </div>
@@ -108,7 +109,7 @@
                         </div>
                     </div>
                     <div class="map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d100869.52902550632!2d-70.7053966352003!3d-33.47388103592723!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c5410425af2f%3A0x8475d53c400f0931!2sSantiago%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1712014375798!5m2!1ses-419!2scl" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d100869.52902550632!2d-70.7053966352003!3d-33.47388103592723!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c5410425af2f%3A0x8475d53c400f0931!2sSantiago%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1712014375798!5m2!1ses-419!2scl" width="300" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </section>
