Add link to the wireframe

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -115,6 +115,7 @@
             </section>
         </main>
         <footer>
+            <a class="wireframe" href="./images/wireframe.png">See the Wireframe</a>
             <p>Footer Content Including Social Media Icons/Links</p>
             <nav>
                 <a href="www.facebook.com">
